Revision history for Runtime-Debugger

0.02
        2022-11-19 - Added lexical variable tab completion.
0.01    2022-11-18
        First version, released on an unsuspecting world.
