@@ -1,5 +1,5 @@
 ---
-abstract: 'Debug perl wihle its running.'
+abstract: 'Debug perl while its running.'
 author:
   - 'Tim Potapov <tim.potapov[AT]gmail.com>'
 build_requires:
@@ -16,13 +16,14 @@ name: Runtime-Debugger
 provides:
   Runtime::Debugger:
     file: lib/Runtime/Debugger.pm
-    version: '0.01'
+    version: '0.02'
 requires:
+  PadWalker: '2.5'
   Term::ReadLine::Gnu: '1.44'
   perl: '5.012'
 resources:
   bugtracker: https://github.com/poti1/runtime-debugger/issues
   license: http://opensource.org/licenses/artistic-license-2.0.php
   repository: https://github.com/poti1/runtime-debugger
-version: '0.01'
+version: '0.02'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
