@@ -18,6 +18,7 @@ provides:
     file: lib/Runtime/Debugger.pm
     version: '0.01'
 requires:
+  PadWalker: '2.5'
   Term::ReadLine::Gnu: '1.44'
   perl: '5.012'
 resources:
