@@ -2,6 +2,7 @@ Revision history for Runtime-Debugger
 
 0.02
         2022-11-19 - Added lexical variable tab completion.
+        2022-11-20 - Loading and saving history of commands.
 0.01    2022-11-18
         First version, released on an unsuspecting world.
 
